<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.5.6</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>org.endeavourhealth.imapi</groupId>
  <artifactId>IMAPI</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <java.version>11</java.version>

    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <plugin.compiler>3.8.1</plugin.compiler>
    <plugin.deploy>2.8.2</plugin.deploy>
    <plugin.jacoco>0.8.5</plugin.jacoco>
    <plugin.sonar>3.5.0.1254</plugin.sonar>
    <plugin.spring>2.4.5</plugin.spring>
    <plugin.surefire>2.22.0</plugin.surefire>

    <!--suppress UnresolvedMavenProperty -->
    <sonar.projectKey>${env.SONAR_PROJECT_KEY}</sonar.projectKey>
    <!--suppress UnresolvedMavenProperty -->
    <sonar.organization>${env.SONAR_ORGANIZATION}</sonar.organization>
    <!--suppress UnresolvedMavenProperty -->
    <sonar.login>${env.SONAR_LOGIN}</sonar.login>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.junit.reportPaths>target/surefire-reports</sonar.junit.reportPaths>
    <sonar.exclusions>parser/**</sonar.exclusions>
    <sonar.coverage.exclusions>api/**, dataaccess-*/**, models/**, statemachine/**, transforms/**</sonar.coverage.exclusions>

    <lib.antlr>4.9.2</lib.antlr>
    <lib.apache.poi>5.0.0</lib.apache.poi>
    <lib.factplusplus>1.6.5</lib.factplusplus>
    <lib.owlapi>4.5.20</lib.owlapi>
    <lib.reactor>3.4.0</lib.reactor>
    <lib.springfox>2.9.2</lib.springfox>
    <lib.swagger>1.5.20</lib.swagger>
    <lib.spring.statemachine>3.0.0</lib.spring.statemachine>
    <lib.testcontainers>1.14.3</lib.testcontainers>
  </properties>

  <modules>
    <module>api</module>
    <module>models</module>
    <module>parser</module>
    <module>logic</module>
    <module>workflow</module>
    <module>statemachine</module>
    <module>transforms</module>
    <module>dataaccess-base</module>
    <module>dataaccess-rdf4j</module>
    <module>dataaccess-jdbc</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${plugin.compiler}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>${plugin.deploy}</version>
        <configuration>
          <skip>false</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${plugin.surefire}</version>
      </plugin>
      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>${plugin.sonar}</version>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.statemachine</groupId>
        <artifactId>spring-statemachine-bom</artifactId>
        <version>${lib.spring.statemachine}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.rdf4j</groupId>
        <artifactId>rdf4j-bom</artifactId>
        <version>3.7.3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <distributionManagement>
    <snapshotRepository>
      <id>snapshots</id>
      <name>maven.endeavourhealth.org-snapshots</name>
      <url>http://maven.endeavourhealth.net:8081/artifactory/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>

  <repositories>
    <repository>
      <snapshots/>
      <id>snapshots</id>
      <name>libs-snapshot</name>
      <url>https://maven.discoverydataservice.net/artifactory/libs-snapshot</url>
    </repository>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>central</id>
      <name>libs-release</name>
      <url>https://maven.discoverydataservice.net/artifactory/libs-release</url>
    </repository>
  </repositories>
</project>
